# py-clean-architecture

./: Dockerfile  README.md  compose.yaml  pyproject.toml
docker/services/mysql/: .my.cnf  my.cnf
src/py_clean_architecture/: __init__.py  config.py  main.py
src/py_clean_architecture/adapter/: __init__.py
src/py_clean_architecture/adapter/controller/: user.py
src/py_clean_architecture/adapter/gateway/repository/: account.py  user.py
src/py_clean_architecture/adapter/gateway/unit_of_work/: user.py
src/py_clean_architecture/adapter/presenter/: user.py
src/py_clean_architecture/application/: __init__.py
src/py_clean_architecture/application/input/: user.py
src/py_clean_architecture/application/output/: user.py
src/py_clean_architecture/application/presenter/: user.py
src/py_clean_architecture/application/service/: user.py
src/py_clean_architecture/application/unit_of_work/: user.py
src/py_clean_architecture/application/usecase/: user.py
src/py_clean_architecture/domain/: __init__.py
src/py_clean_architecture/domain/entity/: account.py  user.py
src/py_clean_architecture/domain/repository/: account.py  user.py
src/py_clean_architecture/domain/service/: user.py
src/py_clean_architecture/infrastructure/: __init__.py
src/py_clean_architecture/infrastructure/database/: setting.py
src/py_clean_architecture/infrastructure/di/: user.py
src/py_clean_architecture/infrastructure/request/: user.py
src/py_clean_architecture/infrastructure/response/: user.py
src/py_clean_architecture/infrastructure/router/: __init__.py
(+5 files in other folders)
